--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <label><input type="radio" name="rad" value="25">25</label>
                 </div>
             </fieldset>
-            <fieldset id="price">
+            <!-- <fieldset id="price">
                 <legend>Minimum Price:</legend>
                 <div class="buttons">
                     <label><input type="radio" name="price" value="0" checked>$</label>
@@ -43,7 +43,7 @@
                     <label><input type="radio" name="price" value="2">$$$</label>
                     <label><input type="radio" name="price" value="3">$$$$</label>
                 </div>
-            </fieldset>
+            </fieldset> -->
         </div>
         <button onclick="getLocation()">Generate a Random Restaurant</button>
     </main>
