add new selectors for restaurant generation
- Slider is done using noUiSlider
- Added price checkboxes

--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Random Restaurant Generator</title>
+    <title>QuickBites! -- Random Restaurant Generator</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="nouislider.css">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="rrg.js"></script>
+    <script src="nouislider.js"></script>
+    <script src="wNumb.js"></script>
 </head>
 
 <body>
     <header>
-        <h1>Random Restaurant Generator</h1>
+        <h1>QuickBites!</h1>
         <nav>
             <a href="#"><img id="play-badge" src="images/play_store.png"></a>
             <a href="#"><img id="app-badge" src="images/apple_store.png"></a>
@@ -22,30 +25,29 @@
     <main id="container">
         <h2 id="name"></h2>
         <a id="directions" href="#" target="_blank"><h3 id="address"></h3></a>
-        <div id="options">
-            <fieldset>
-                <legend>Max Distance (miles):</legend>
+        <div>
+            <div id="distance" class="selector">
+                <h3>Distance (in miles):</h3>
+                <div id="slider"></div>
+            </div>
+            <div id="price" class="selector">
+                <h3>Price:</h3>
                 <div class="buttons">
-                    <label><input type="radio" name="rad" value="1">1</label>
-                    <label><input type="radio" name="rad" value="2">2</label>
-                    <label><input type="radio" name="rad" value="3">3</label>
-                    <label><input type="radio" name="rad" value="5" checked>5</label>
-                    <label><input type="radio" name="rad" value="10">10</label>
-                    <label><input type="radio" name="rad" value="15">15</label>
-                    <label><input type="radio" name="rad" value="25">25</label>
+                    <input type="checkbox" name="price" id="price-any" value="-1" checked>
+                    <label for="price-any">Any</label>
+                    <input type="checkbox" name="price" id="price-1" value="1">
+                    <label for="price-1">$</label>
+                    <input type="checkbox" name="price" id="price-2" value="2">
+                    <label for="price-2">$$</label>
+                    <input type="checkbox" name="price" id="price-3" value="3">
+                    <label for="price-3">$$$</label>
+                    <input type="checkbox" name="price" id="price-4" value="4">
+                    <label for="price-4">$$$$</label>
                 </div>
-            </fieldset>
-            <!-- <fieldset id="price">
-                <legend>Minimum Price:</legend>
-                <div class="buttons">
-                    <label><input type="radio" name="price" value="0" checked>$</label>
-                    <label><input type="radio" name="price" value="1">$$</label>
-                    <label><input type="radio" name="price" value="2">$$$</label>
-                    <label><input type="radio" name="price" value="3">$$$$</label>
-                </div>
-            </fieldset> -->
+            </div>
         </div>
         <button onclick="getLocation()">Generate a Random Restaurant</button>
     </main>
+    <script src="selectors.js"></script>
 </body>
 </html>
