--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
 </head>
 
 <body>
-    <div id="container">
+    <div id="container" class="centered">
     <header>
         <h1>QuickBites!</h1>
-        <nav>
+        <!-- <nav>
             <a href="#"><img id="play-badge" src="images/play_store.png"></a>
             <a href="#"><img id="app-badge" src="images/apple_store.png"></a>
-        </nav>
+        </nav> -->
     </header>
     <main>
-        <div id="place">
+        <div id="place" class="centered">
             <div id="details">
                 <h2 id="name">Make your dinner plans with us.</h2>
                 <a id="directions" href="#" target="_blank"><h3 id="address">QuickBites! -- the leading random restaurant generator.</h3></a>
             </div>
         </div>
-        <div id="form">
+        <div id="form" class="centered">
             <div id="distance" class="selector">
                 <h4>Distance (in miles):</h4>
                 <div id="slider"></div>
