--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     
     <title>QuickBites! -- Random Restaurant Generator</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="nouislider.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.0/css/ion.rangeSlider.min.css"/>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.0/js/ion.rangeSlider.min.js"></script>
+
     <script src="rrg.js"></script>
-    <script src="nouislider.js"></script>
-    <script src="wNumb.js"></script>
 </head>
 
 <body>
@@ -33,8 +33,8 @@
         </div>
         <div id="form" class="centered">
             <div id="distance" class="selector">
-                <h4>Distance (in miles):</h4>
-                <div id="slider"></div>
+                <h4>Distance:</h4>
+                <input type="text" name="my_range" value="">
             </div>
             <div id="price" class="selector">
                 <h4>Price:</h4>
