--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     
     <title>QuickBites! -- Random Restaurant Generator</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.0/css/ion.rangeSlider.min.css"/>
+    <link rel="stylesheet" href="ion.rangeSlider.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.0/js/ion.rangeSlider.min.js"></script>
+    <script src="ion.rangeSlider.min.js"></script>
 
     <script src="rrg.js"></script>
 </head>
