--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
             </div>
         </div>
         <div id="form" class="centered">
-            <div id="distance" class="selector">
-                <h4>Distance:</h4>
-                <input type="text" name="my_range" value="">
+            <div id="distance">
+                <h4>Distance</h4>
+                <input type="text" name="my_range" value="" class="selector">
             </div>
-            <div id="price" class="selector">
-                <h4>Price:</h4>
-                <div class="buttons">
+            <div id="price">
+                <h4>Price</h4>
+                <div class="buttons selector">
                     <input type="checkbox" name="price" id="price-any" value="-1" checked>
                     <label for="price-any">Any</label>
                     <input type="checkbox" name="price" id="price-1" value="1">
