add Yelp display requirements

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
             <div id="details">
                 <h2 id="name">Make your dinner plans with us.</h2>
                 <a id="directions" target="_blank"><h3 id="address">QuickBites! -- the leading random restaurant generator.</h3></a>
+                <a id="yelp-url" target="_blank"><div id="yelp" class="centered">
+                    <div id="rating">
+                        <img>
+                        <span></span>
+                    </div>
+                    <img id="yelp-logo" src="images/yelp/logo.png">
+                </div></a>
             </div>
         </div>
         <div id="form" class="centered">
@@ -49,8 +56,8 @@
                     <label for="price-4">$$$$</label>
                 </div>
             </div>
-            <button onclick="getLocation()">Generate a Random Restaurant</button>
         </div>
+        <button onclick="getLocation()">Generate a Random Restaurant</button>
     </main>
     <footer class="container centered">
         <p>Copyright © 2019 <a href="https://yilongzhu.com/" target="_blank">Yilong Zhu</a>. All rights reserved.</p>
