--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div id="details">
                 <h2 id="name">Make your dinner plans with us.</h2>
                 <a id="directions" target="_blank"><h3 id="address">QuickBites! -- the leading random restaurant generator.</h3></a>
-                <a id="yelp-url" target="_blank"><div id="yelp" class="centered">
+                <a id="yelp-url" href="https://www.yelp.com/" target="_blank"><div id="yelp" class="centered">
                     <div id="rating">
                         <img>
                         <span></span>
