--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <header>
         <div class="container centered">
         <h1>QuickBites!</h1>
-        <nav>
+        <!-- <nav>
             <a href="#"><img id="app-badge" src="images/apple_store.png" target="_blank"></a>
             <a href="#"><img id="play-badge" src="images/play_store.png" target="_blank"></a>
-        </nav>
+        </nav> -->
         </div>
     </header>
     <main class="container centered">
